--- a/app.json
+++ b/app.json
@@ -22,7 +22,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/realm-app.png",
         "backgroundColor": "#FFFFFF"
       },
       "package": "com.dev.realm.realmMemo"
